# maintanance_Grad_project

./: .replit  README.md  branch1_predictive_dataset_extended_to_2026_04.xlsx  branch2_predictive_dataset_extended_to_2026_04 (1).xlsx  branch3_predictive_dataset_extended_to_2026_04.xlsx  branch_1_predictions.xlsx  branch_2_model.joblib  branch_2_predictions.xlsx  branch_3_predictions.xlsx  edit_nb.py  grad code.ipynb  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  replit.md  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/auth/: actions.ts
app/dashboard/: layout.tsx  page.tsx
components/: theme-provider.tsx
components/dashboard/: admin-dashboard.tsx  admin-datasets-view.tsx  chatbot-wrapper.tsx  chatbot.tsx  inventory-view.tsx  maintenance-calendar-view.tsx  nav.tsx  predictions-view.tsx  premium-datasets-view.tsx  premium-user-dashboard.tsx  requests-table.tsx  tasks-table.tsx  technician-dashboard.tsx  technician-tasks-view.tsx  theme-toggle.tsx  user-dashboard.tsx  user-devices-view.tsx  user-requests-view.tsx  users-view.tsx
lib/: types.ts
lib/auth/: password.ts  session.ts
lib/device/: brand-inference.ts
lib/maintenance/: scheduling.ts
model_api/: branch_1_printer_model.joblib  branch_3_printer_model.joblib  requirements.txt
scripts/: 001_create_tables.sql  002_create_profile_trigger.sql  003_seed_inventory.sql  004_custom_auth.sql  005_premium_users.sql  006_premium_dataset_device_type.sql  007_maintenance_scheduled_date.sql  008_tasks_assignment_schedule.sql  predict_dataset.py
(+34 files in other folders)
