[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.0",
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.45.0",
    "xlrd>=2.0.2",
]
